--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,8 @@ h1 {
 h2 {
 	font-size: 36px;
 	font-weight: bold;
+    color: #1aaf5d !important;
+    text-shadow: 0px 1px 0px #179750;
 }
 h3 {
 	font-size: 30px;
@@ -82,7 +84,7 @@ h6 {
 p {
 	font-family: inherit;
 	font-weight: 400;
-	color: #6a7483;
+	color: #40464f;
 	font-size:13px;
 	line-height: 24px;
 	font-family: 'Open Sans', sans-serif;
@@ -158,6 +160,9 @@ a {
 }
 .white-text {
 	color: #fff !important;
+}
+.fa-heart.white-text {
+    text-shadow: 0px 1px 0px #f2babb !important;
 }
 .font-italic {
 	font-style: italic;
@@ -236,7 +241,7 @@ section {
 	letter-spacing: 1px;
 }
 .heading-block span{
-	color:#6a7483;
+	color:#40464f;
 	font-size:15px;
 	letter-spacing:1px;
 }
@@ -805,7 +810,7 @@ header.coporate-header .ownmenu > li > .megamenu {
 .pricing-table ul li{
 	line-height:50px;
 	font-size:14px;
-	color:#6a7483;
+	color:#40464f;
 }
 .pricing-table ul li:nth-child(2){
 	background:#f0f0f0;
@@ -1425,7 +1430,7 @@ header.coporate-header .ownmenu > li > .megamenu {
 	margin-top: 20px;
 	display: inline-block;
 	width: 100%;
-	color:#6a7483;
+	color:#40464f;
 	font-size: 12px;
 }
 .comments form .form-control {
