Split into multiple pages, add contact, another testimonial

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,18 +26,16 @@
 <header class="header coporate-header">
   <div class="sticky">
     <div class="container">
-      <div class="logo"> <a href="#home" class="page-scroll"><img src="images/logo.png" alt=""></a> </div>
+      <div class="logo"> <a href="/"><img src="images/logo.png" alt=""></a> </div>
 
       <!-- Nav -->
       <nav>
         <ul id="ownmenu" class="ownmenu">
-          <li><a class="page-scroll" href="#home">HOME</a></li>
-          <li><a class="page-scroll" href="#strategy"> STRATEGY </a></li>
-          <li><a class="page-scroll" href="#services"> SERVICES </a></li>
-          <li><a class="page-scroll" href="#about"> ABOUT </a></li>
-          <li><a class="page-scroll" href="#case-studies"> CASE STUDIES </a></li>
-          <li><a class="page-scroll" href="#testimonials"> TESTIMONIALS </a></li>
-          <li><a class="page-scroll" href="#contact"> CONTACT</a></li>
+          <li><a href="/">HOME</a></li>
+          <li><a href="/services"> SERVICES </a></li>
+          <li><a href="/case-studies"> CASE STUDIES </a></li>
+          <li><a href="/testimonials"> TESTIMONIALS </a></li>
+          <li><a href="/contact"> CONTACT</a></li>
         </ul>
       </nav>
     </div>
