--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
           </ul>
 
 
-          <h6>Services provided</h6>
+          <h6>Our Services</h6>
           <ul class="links">
             <li><a href="#">Training</a></li>
             <li><a href="#">Data Science</a></li>
@@ -45,9 +45,9 @@
           <h6>Get A Free Quote</h6>
           <div class="quote">
             <form action="https://formspree.io/ali@datomsolutions.com" method="POST">
-              <input class="form-control" type="text" name="name" placeholder="Full Name">
-              <input class="form-control" type="text" name="_replyto" placeholder="Email Address">
-              <textarea class="form-control" name="message" placeholder="Tell us a bit more about yourself and your project"></textarea>
+              <input class="form-control" type="text" name="name" placeholder="Name" required>
+              <input class="form-control" type="email" name="_replyto" placeholder="Email Address" required>
+              <textarea class="form-control" name="message" placeholder="Tell us a bit more about yourself and your project" required></textarea>
               <button type="submit" class="btn btn-green">SEND NOW</button>
             </form>
           </div>
