--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
           <ul class="social_icons">
             <li><a target="_blank" href="https://www.facebook.com/Datom-Solutions-582393225300015/"><i class="fa fa-facebook"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/DatomSolutions"><i class="fa fa-twitter"></i></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/company/17924474"><i class="fa fa-linkedin"></i></a></li>
           </ul>
         </div>
 
